[gd_scene load_steps=10 format=3 uid="uid://bv6cqi5cgan6r"]

[ext_resource type="Script" path="res://RoundEndText.gd" id="1_ci8yw"]
[ext_resource type="Texture2D" uid="uid://budglk2ynqbxw" path="res://Assets/tiles/blue tank.png" id="2_ky26m"]
[ext_resource type="Texture2D" uid="uid://bh6ieslbiqc0r" path="res://Assets/tiles/Green-Tank.png" id="3_y5gyc"]
[ext_resource type="Texture2D" uid="uid://b5qkv82jepcft" path="res://new1616.png" id="4_yoamd"]

[sub_resource type="LabelSettings" id="LabelSettings_6mvbw"]
line_spacing = 10.0
font_size = 25
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_0rsnl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RoundText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_61fn2"]
resource_name = "transition"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RoundText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jl8af"]
_data = {
"RESET": SubResource("Animation_0rsnl"),
"transition": SubResource("Animation_61fn2")
}

[sub_resource type="LabelSettings" id="LabelSettings_v34iv"]
font_size = 23

[node name="RoundText" type="Label"]
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
offset_left = -18.0
offset_top = -16.0
offset_right = 416.0
offset_bottom = 415.0
text = "

"
label_settings = SubResource("LabelSettings_6mvbw")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true
script = ExtResource("1_ci8yw")

[node name="Player1" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(149, 225)
scale = Vector2(2, 2)
texture = ExtResource("2_ky26m")

[node name="Player1Label" type="Label" parent="Player1"]
texture_filter = 1
offset_left = 14.0
offset_top = -12.0
offset_right = 24.0
offset_bottom = 14.0
scale = Vector2(1.1, 1)
text = "0"

[node name="Player2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(268, 224)
rotation = -3.14159
scale = Vector2(2, 2)
texture = ExtResource("3_y5gyc")

[node name="Player2Label" type="Label" parent="Player2"]
texture_filter = 1
offset_left = 23.5003
offset_top = 11.3328
offset_right = 33.5003
offset_bottom = 37.3328
rotation = -3.14253
text = "0"

[node name="BackGroundText" type="Sprite2D" parent="."]
modulate = Color(0.12549, 0.12549, 0.12549, 1)
show_behind_parent = true
position = Vector2(220.5, 216)
scale = Vector2(27.339, 27)
texture = ExtResource("4_yoamd")

[node name="Label" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 189.0
offset_top = 211.0
offset_right = 229.0
offset_bottom = 237.0
text = "----"
horizontal_alignment = 1

[node name="ToNext" type="Label" parent="."]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 118.0
offset_top = 260.0
offset_right = 310.0
offset_bottom = 312.0
text = "Press Tab to Restart 
Press ESC for Main Menu"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.021

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_jl8af")
}

[node name="RoundTexting" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 161.0
offset_right = 422.0
offset_bottom = 213.0
text = "Round 1"
label_settings = SubResource("LabelSettings_v34iv")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true
